--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,14 @@
 <html>
 <head>
   <title>DnD Space</title>
+  <!-- inject:css -->
+  <link rel="stylesheet" href="/client/app/app.css">
+  <!-- endinject -->
 </head>
 <body>
-<!-- Scripts -->
-<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+  <!-- inject:js -->
+  <script src="/client/bower_components/angular/angular.min.js"></script>
+  <script src="/client/app/app.js"></script>
+  <!-- endinject -->
 </body>
 </html>
