added injector to gulp

--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,20 @@
 <head>
   <title>DnD Space</title>
   <!-- inject:css -->
-  <link rel="stylesheet" href="/client/app/app.css">
+  <link rel="stylesheet" href="app/main/main.css">
+  <link rel="stylesheet" href="app/app.css">
   <!-- endinject -->
 </head>
-<body>
+<body ng-app="dndSpace">
+  <div ui-view=""></div>
+
   <!-- inject:js -->
-  <script src="/client/bower_components/angular/angular.min.js"></script>
-  <script src="/client/app/app.js"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="app/navbar/navbar.controller.js"></script>
+  <script src="app/main/main.js"></script>
+  <script src="app/main/main.controller.js"></script>
+  <script src="app/app.js"></script>
   <!-- endinject -->
 </body>
 </html>
