--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,9 +1,12 @@
+<div ng-include="'app/navbar/navbar.html'"></div>
 <header>
   <div>
     <h1>DnD Space</h1>
     <p>A space for everything Dungeons & Dragons</p>
   </div>
 </header>
+
+<h1>Hello World!</h1>
 
 <footer>
   <div>
