added inject to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,13 @@
-<!DOCTYPE <html>
+<!DOCTYPE html>
 <head>
   <title>DnD Space</title>
+  <meta charset="utf-8">
+  <!-- inject:css -->
+  <!-- endinject -->
 </head>
 <body>
-  Hello World!
+  <h1>Welcome to Dungeons & Dragons Space</h1>
+  <!-- inject:js -->
+  <!-- endinject -->
 </body>
 </html>
