--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,13 @@
   <title>DnD Space</title>
   <meta charset="utf-8">
   <!-- inject:css -->
+  <link rel="stylesheet" href="dnd/dnd.css">
   <!-- endinject -->
 </head>
 <body>
   <h1>Welcome to Dungeons & Dragons Space</h1>
   <!-- inject:js -->
+  <script src="dnd/dnd.js"></script>
   <!-- endinject -->
 </body>
 </html>
