now serving static file

--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,10 @@
   <!-- endinject -->
 </head>
 <body>
+  Welcome!
   <h1>Welcome to Dungeons & Dragons Space</h1>
   <!-- inject:js -->
-  <script src="dnd/dnd.js"></script>
+  <script src="assets/fonts.js"></script>
   <!-- endinject -->
 </body>
 </html>
